--- a/front/minhaestante/public/index.html
+++ b/front/minhaestante/public/index.html
@@ -46,6 +46,19 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
+		<footer class="background-default text-center">
+			<div class="container">
+				<div class="row">
+					<div class="col">
+						<p>
+							<a href="/test" target="_blank" rel="noreferrer" style="color: white;">
+								Para ter acesso a todas as telas clique aqui!
+							</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
