chore(minhaestante): Update homepage link in index.html

--- a/front/minhaestante/public/index.html
+++ b/front/minhaestante/public/index.html
@@ -27,7 +27,7 @@
 					<div class="col">
 						<p>
 							<a
-								href="/test"
+								href="/test/d5135e3e-646a-55e7-a38d-9724159b7f9f"
 								target="_blank"
 								rel="noreferrer"
 								style="color: white"
