--- a/front/minhaestante/public/index.html
+++ b/front/minhaestante/public/index.html
@@ -9,6 +9,7 @@
 			content="Web site created using create-react-app"
 		/>
 		<title>Minha Estante</title>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
@@ -18,13 +19,14 @@
 				<div class="row">
 					<div class="col">
 						<p>
+							<i class="fa-solid fa-kiwi-bird" style="color: #ffffff;"></i>
 							<a
 								href="/test/d5135e3e-646a-55e7-a38d-9724159b7f9f"
 								target="_blank"
 								rel="noreferrer"
 								style="color: white"
 							>
-								Para ter acesso a todas as telas clique aqui!
+							  Para ter acesso a todas as telas clique aqui!
 							</a>
 						</p>
 					</div>
