--- a/front/minhaestante/public/index.html
+++ b/front/minhaestante/public/index.html
@@ -10,6 +10,7 @@
 		/>
 		<title>Minha Estante</title>
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+		<link rel="icon" href="icone.png" type="image/png">
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
