refactor(minhaestante): Add footer element with link in index.js.

--- a/front/minhaestante/public/index.html
+++ b/front/minhaestante/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.5" />
 		<meta
@@ -9,29 +8,14 @@
 			content="Web site created using create-react-app"
 		/>
 		<title>Minha Estante</title>
-		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-		<link rel="icon" href="icone.png" type="image/png">
+		<link
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+			rel="stylesheet"
+		/>
+		<link rel="icon" href="icone.png" type="image/png" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<footer class="background-default text-center">
-			<div class="container">
-				<div class="row">
-					<div class="col">
-						<p>
-							<i class="fa-solid fa-kiwi-bird" style="color: #ffffff;"></i>
-							<a
-								href="/test/d5135e3e-646a-55e7-a38d-9724159b7f9f"
-								target="_blank"
-								rel="noreferrer"
-								style="color: white"
-							>
-							  Para ter acesso a todas as telas clique aqui!
-							</a>
-						</p>
-					</div>
-				</div>
-			</div>
 	</body>
 </html>
